      fulfilling the wish of \PR{17532}; subsequently,
      \code{available.packages()} gets new argument \code{quiet}, solving
      \PR{17573}.

      \item \code{stopifnot()} gets new argument \code{exprObject} to allow
      an \R object of class \code{expression} (or other \sQuote{language})
      to work more consistently, thanks to suggestions by Suharto Anggono.
    }
  }
}

\section{\Rlogo CHANGES IN R 3.6.1 patched}{

  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{runmed(x, *)} gets new option \code{na.action}
      determining \emph{how} to handle \code{NaN} or \code{NA} in \code{x}.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item Detection of the C stack direction has been moved from
      run-time to \command{configure}: this is safer with LTO builds and
      allows the detection to be overridden -- see file
      \file{config.site}.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item Header \file{Rconfig.h} contains the value of
	\code{FC_LEN_T} deduced at installation which is used by the
	prototypes in headers \file{BLAS.h} and \file{Lapack.h} but to
	avoid extensive breakage this is only exposed when
	\code{USE_FC_LEN_T} is defined.

	If a package's C/C++ calls to BLAS/LAPACK allow for the
	\sQuote{hidden} arguments used by most Fortran compilers to pass
	the lengths of Fortran character arguments, define
	\code{USE_FC_LEN_T} and include \file{Rconfig.h} (possibly
	\emph{via} \file{R.h}) before including \file{BLAS.h} or
	\file{Lapack.h}.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{runmed(x, *)} when \code{x} contains missing values
      now works consistently for both \code{algorithm="Stuetzle"} and
      \code{"Turlach"}, and no longer segfaults for \code{"Turlach"}, as
      reported by Hilmar Berger.

      \item \code{conformMethod()} now correctly works in cases containing