@@ -425,7 +425,7 @@ SEXP attribute_hidden do_format(SEXP call, SEXP op, SEXP args, SEXP env)
     if(isLogical(CAR(args))) {
 	int tmp = LOGICAL(CAR(args))[0];
 	if(tmp == NA_LOGICAL) sci = NA_INTEGER;
-	else sci = tmp > 0 ?-100 : 100;
+	else sci = tmp > 0 ? -99 : 310;
     } else if (isNumeric(CAR(args))) {
 	sci = asInteger(CAR(args));
     } else
